<resources>
    <string name="app_name">Project_02_exercise_app</string>
    <string name="sign_in">Sign in!</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="no_account">No account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="strotta_username">Username</string>
    <string name="strotta_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER!</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in!</string>
    <string name="login">LOGIN!</string>
    <string name="password_login">Password</string>
    <string name="username_login">Username</string>
    <string name="welcome_to_strotta_please_log_in">Welcome To Strotta, Please Log in.</string>
    <string name="which_exercise_type">Which exercise type?</string>
    <string name="strength">Strength</string>
    <string name="calisthenics">Calisthenics</string>
    <string name="admin_page">Admin Page</string>
    <string name="log">Log!</string>
    <string name="type_of_cardio">Type of Cardio</string>
    <string name="log_exercise">Log Exercise!</string>
    <string name="logged_in">Logged in.</string>
    <string name="preference_userId_key">preference_userId_key</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_cardio">CardioActivity</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="pace">Pace:</string>
    <string name="log_run">Log Run</string>
    <string name="exercise">Exercise</string>
    <string name="enter_an_exercise">Enter an exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a body weight</string>
    <string name="reps">Reps</string>
    <string name="enter_reps">Enter reps</string>
    <string name="enter_weight">Enter weight</string>
    <string name="log_workout">Log Workout</string>
    <string name="Reps">Reps</string>
    <string name="logged_workouts_n">Logged Workouts:\n</string>
    <string name="sets">Sets</string>
    <string name="enter_sets">Enter sets</string>
    <string name="calisthenics_activity">Calisthenics Activity</string>
</resources>