<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_gradient"
    android:fitsSystemWindows="true">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"/>
<com.google.android.material.card.MaterialCardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="16dp"
    android:elevation="4dp"
    app:layout_constraintTop_toBottomOf="@+id/time_tv"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/exercise"
        android:textSize="24sp"
 />

    <EditText
        android:id="@+id/exerciseInputEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_an_exercise"
        android:inputType="textAutoComplete"
        android:padding="8dp"
/>

    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/weightInputEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Weight"
        android:inputType="number|numberDecimal"
   />
    <TextView
        android:id="@+id/repsLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Reps"
        android:textSize="24sp"
       />
    <EditText
        android:id="@+id/repsInputEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="Enter reps"
        android:inputType="number|numberDecimal"
  />

    <TextView
        android:id="@+id/setsLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Sets"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/setsInputEditTextView"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:hint="Enter sets"
        android:inputType="number|numberDecimal"
 />

    <Button
        android:id="@+id/log_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Log!"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/log_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_btn">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/log_history_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="Logged Workouts:\n"
            android:textSize="16sp" />
    </ScrollView>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>